--- a/output/table.html
+++ b/output/table.html
@@ -70,8 +70,8 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 <td><a target="_blank" href=https://suttacentral.net/sn35.68/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.68/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-</br>
-</br>
+“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
+“Sir, they speak of this thing called ‘the world’. </br>
 <br class="styled">
 </td>
 <td>0</td>
@@ -82,8 +82,8 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 <td><a target="_blank" href=https://suttacentral.net/sn35.82/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.82/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-</br>
-</br>
+“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
+“Sir, they speak of this thing called ‘the world’. </br>
 <br class="styled">
 </td>
 <td>0</td>
@@ -94,8 +94,8 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 <td><a target="_blank" href=https://suttacentral.net/sn35.84/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.84/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-</br>
-</br>
+“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
+“Sir, they speak of this thing called ‘the world’. </br>
 <br class="styled">
 </td>
 <td>0</td>
