--- a/output/kāyagat_analysis.html
+++ b/output/kāyagat_analysis.html
@@ -66,7 +66,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
     </thead>
     <tbody><tr>
 <td>an1.296-305</td>
-<td><b>kāyagat</b>āsati</td>
+<td>kāyagatāsati</td>
 <td><a target="_blank" href=https://suttacentral.net/an1.296-305/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an1.296-305/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -78,7 +78,7 @@ Recollection of the teaching … Recollection of the Saṅgha … Recollection o
 </tr>
 <tr>
 <td>an1.394-574</td>
-<td><b>kāyagat</b>āsatiṁ</td>
+<td>kāyagatāsatiṁ</td>
 <td><a target="_blank" href=https://suttacentral.net/an1.394-574/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an1.394-574/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -90,7 +90,7 @@ mindfulness of the body … </br>
 </tr>
 <tr>
 <td>an1.575-615</td>
-<td><b>kāyagat</b>ā <b>Kāyagat</b>ā <b>Kāyagat</b>āsativagga (<b>Kāyagat</b>āsativaggo) <b>Kāyagat</b>āya</td>
+<td>kāyagatā Kāyagatā Kāyagatāsativagga (Kāyagatāsativaggo) Kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/an1.575-615/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an1.575-615/en/sujato?layout=linebyline>En</a></td>
 <td>12</td>   
 <td>
@@ -135,7 +135,7 @@ Mindfulness of the body. </br>
 </tr>
 <tr>
 <td>an1.616-627</td>
-<td><b>kāyagat</b>āsati <b>kāyagat</b>āsatiṁ</td>
+<td>kāyagatāsati kāyagatāsatiṁ</td>
 <td><a target="_blank" href=https://suttacentral.net/an1.616-627/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an1.616-627/en/sujato?layout=linebyline>En</a></td>
 <td>24</td>   
 <td>
@@ -216,7 +216,7 @@ Those who have realized mindfulness of the body have realized the deathless.” 
 </tr>
 <tr>
 <td>an9.11</td>
-<td><b>kāyagat</b>āsati</td>
+<td>kāyagatāsati</td>
 <td><a target="_blank" href=https://suttacentral.net/an9.11/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an9.11/en/sujato?layout=linebyline>En</a></td>
 <td>10</td>   
 <td>
@@ -255,7 +255,7 @@ Someone who had not established mindfulness of the body might well attack one of
 </tr>
 <tr>
 <td>dhp290-305</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/dhp290-305/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dhp290-305/en/sujato?layout=linebyline>En</a></td>
 <td>2</td>   
 <td>
@@ -270,7 +270,7 @@ are constantly mindful of the body. </br>
 </tr>
 <tr>
 <td>dn34</td>
-<td><b>Kāyagat</b>āsati</td>
+<td>Kāyagatāsati</td>
 <td><a target="_blank" href=https://suttacentral.net/dn34/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dn34/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -282,7 +282,7 @@ Mindfulness of the body that is full of pleasure. </br>
 </tr>
 <tr>
 <td>mn119</td>
-<td><b>kāyagat</b>āsati <b>kāyagat</b>āsatiṁ <b>Kāyagat</b>āsatisutta <b>Kāyagat</b>āsatisuttaṁ <b>Kāyagat</b>āya</td>
+<td>kāyagatāsati kāyagatāsatiṁ Kāyagatāsatisutta Kāyagatāsatisuttaṁ Kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/mn119/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/mn119/en/sujato?layout=linebyline>En</a></td>
 <td>34</td>   
 <td>
@@ -393,7 +393,7 @@ You can expect these ten benefits when mindfulness of the body has been cultivat
 </tr>
 <tr>
 <td>mn120</td>
-<td><b>kāyagat</b>o</td>
+<td>kāyagato</td>
 <td><a target="_blank" href=https://suttacentral.net/mn120/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/mn120/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -405,7 +405,7 @@ You can expect these ten benefits when mindfulness of the body has been cultivat
 </tr>
 <tr>
 <td>sn16.11</td>
-<td><b>kāyagat</b>āsati</td>
+<td>kāyagatāsati</td>
 <td><a target="_blank" href=https://suttacentral.net/sn16.11/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn16.11/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -417,7 +417,7 @@ You can expect these ten benefits when mindfulness of the body has been cultivat
 </tr>
 <tr>
 <td>sn35.247</td>
-<td><b>kāyagat</b>ā <b>kāyagat</b>āsati <b>kāyagat</b>āya</td>
+<td>kāyagatā kāyagatāsati kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/sn35.247/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.247/en/sujato?layout=linebyline>En</a></td>
 <td>4</td>   
 <td>
@@ -438,7 +438,7 @@ In the same way, when a mendicant has developed and cultivated mindfulness of th
 </tr>
 <tr>
 <td>sn43.1</td>
-<td><b>Kāyagat</b>āsati <b>Kāyagat</b>āsatisutta</td>
+<td>Kāyagatāsati Kāyagatāsatisutta</td>
 <td><a target="_blank" href=https://suttacentral.net/sn43.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn43.1/en/sujato?layout=linebyline>En</a></td>
 <td>2</td>   
 <td>
@@ -453,7 +453,7 @@ Mindfulness of the body. </br>
 </tr>
 <tr>
 <td>sn43.44</td>
-<td><b>Kāyagat</b>āsati</td>
+<td>Kāyagatāsati</td>
 <td><a target="_blank" href=https://suttacentral.net/sn43.44/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn43.44/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -465,7 +465,7 @@ Mindfulness of the body. </br>
 </tr>
 <tr>
 <td>sn47.20</td>
-<td><b>kāyagat</b>ā <b>kāyagat</b>āya</td>
+<td>kāyagatā kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/sn47.20/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn47.20/en/sujato?layout=linebyline>En</a></td>
 <td>2</td>   
 <td>
@@ -480,7 +480,7 @@ samatittiko telapattoti kho, bhikkhave, <b>kāyagat</b>āya etaṁ satiyā adhiv
 </tr>
 <tr>
 <td>sn8.4</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/sn8.4/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn8.4/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -492,7 +492,7 @@ With mindfulness immersed in the body, </br>
 </tr>
 <tr>
 <td>snp2.11</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/snp2.11/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/snp2.11/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -504,7 +504,7 @@ With mindfulness immersed in the body, </br>
 </tr>
 <tr>
 <td>thag13.1</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/thag13.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thag13.1/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -516,7 +516,7 @@ constant mindfulness of the body, </br>
 </tr>
 <tr>
 <td>thag1.6</td>
-<td><b>kāyagat</b>āsatiṁ</td>
+<td>kāyagatāsatiṁ</td>
 <td><a target="_blank" href=https://suttacentral.net/thag1.6/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thag1.6/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -528,7 +528,7 @@ guarding mindfulness of the body, steadfast. </br>
 </tr>
 <tr>
 <td>thag17.3</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/thag17.3/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thag17.3/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -540,7 +540,7 @@ mindfulness of the body. </br>
 </tr>
 <tr>
 <td>thag21.1</td>
-<td><b>kāyagat</b>ā</td>
+<td>kāyagatā</td>
 <td><a target="_blank" href=https://suttacentral.net/thag21.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thag21.1/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -552,7 +552,7 @@ With mindfulness immersed in the body, </br>
 </tr>
 <tr>
 <td>thag7.2</td>
-<td><b>kāyagat</b>aṁ</td>
+<td>kāyagataṁ</td>
 <td><a target="_blank" href=https://suttacentral.net/thag7.2/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thag7.2/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
@@ -564,7 +564,7 @@ constant mindfulness of the body. </br>
 </tr>
 <tr>
 <td>ud3.5</td>
-<td><b>kāyagat</b>ā <b>kāyagat</b>āya</td>
+<td>kāyagatā kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/ud3.5/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/ud3.5/en/sujato?layout=linebyline>En</a></td>
 <td>3</td>   
 <td>
@@ -582,7 +582,7 @@ The Buddha saw him meditating there. </br>
 </tr>
 <tr>
 <td>ud7.8</td>
-<td><b>kāyagat</b>ā <b>kāyagat</b>āya</td>
+<td>kāyagatā kāyagatāya</td>
 <td><a target="_blank" href=https://suttacentral.net/ud7.8/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/ud7.8/en/sujato?layout=linebyline>En</a></td>
 <td>3</td>   
 <td>
