--- a/output/table.html
+++ b/output/table.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Loko, loko in Pali Suttas</title>
+  <title>Kacchap in Pali Suttas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <script
@@ -49,7 +49,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 
 </head>
 <body>
-    <h3>Loko, loko in Pali Suttas</h3>
+    <h3>Kacchap in Pali Suttas</h3>
     <button id="btn-hide-all-children" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" type="button">Vivaṭṭo</button>
 <hr>
@@ -65,37 +65,135 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
         </tr>
     </thead>
     <tbody><tr>
-<td>sn35.68</td>
-<td></td>
-<td><a target="_blank" href=https://suttacentral.net/sn35.68/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.68/en/sujato?layout=linebyline>En</a></td>
+<td>dn1</td>
+<td><b>kacchap</b>alakkhaṇaṁ</td>
+<td><a target="_blank" href=https://suttacentral.net/dn1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dn1/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
-“Sir, they speak of this thing called ‘the world’. </br>
+seyyathidaṁ—maṇilakkhaṇaṁ vatthalakkhaṇaṁ daṇḍalakkhaṇaṁ satthalakkhaṇaṁ asilakkhaṇaṁ usulakkhaṇaṁ dhanulakkhaṇaṁ āvudhalakkhaṇaṁ itthilakkhaṇaṁ purisalakkhaṇaṁ kumāralakkhaṇaṁ kumārilakkhaṇaṁ dāsalakkhaṇaṁ dāsilakkhaṇaṁ hatthilakkhaṇaṁ assalakkhaṇaṁ mahiṁsalakkhaṇaṁ usabhalakkhaṇaṁ golakkhaṇaṁ ajalakkhaṇaṁ meṇḍalakkhaṇaṁ kukkuṭalakkhaṇaṁ vaṭṭakalakkhaṇaṁ godhālakkhaṇaṁ kaṇṇikālakkhaṇaṁ <b>kacchap</b>alakkhaṇaṁ migalakkhaṇaṁ </br>
+This includes reading the marks of gems, cloth, clubs, swords, spears, arrows, weapons, women, men, boys, girls, male and female bondservants, elephants, horses, buffaloes, bulls, cows, goats, rams, chickens, quails, monitor lizards, rabbits, tortoises, or deer. </br>
+<br class="styled">
+</td>
+<td>2</td>
+</tr>
+<tr>
+<td>dn2</td>
+<td><b>kacchap</b>alakkhaṇaṁ</td>
+<td><a target="_blank" href=https://suttacentral.net/dn2/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dn2/en/sujato?layout=linebyline>En</a></td>
+<td>1</td>   
+<td>
+Seyyathidaṁ—maṇilakkhaṇaṁ vatthalakkhaṇaṁ daṇḍalakkhaṇaṁ satthalakkhaṇaṁ asilakkhaṇaṁ usulakkhaṇaṁ dhanulakkhaṇaṁ āvudhalakkhaṇaṁ itthilakkhaṇaṁ purisalakkhaṇaṁ kumāralakkhaṇaṁ kumārilakkhaṇaṁ dāsalakkhaṇaṁ dāsilakkhaṇaṁ hatthilakkhaṇaṁ assalakkhaṇaṁ mahiṁsalakkhaṇaṁ usabhalakkhaṇaṁ golakkhaṇaṁ ajalakkhaṇaṁ meṇḍalakkhaṇaṁ kukkuṭalakkhaṇaṁ vaṭṭakalakkhaṇaṁ godhālakkhaṇaṁ kaṇṇikalakkhaṇaṁ <b>kacchap</b>alakkhaṇaṁ migalakkhaṇaṁ </br>
+This includes reading the marks of gems, cloth, clubs, swords, spears, arrows, weapons, women, men, boys, girls, male and female bondservants, elephants, horses, buffaloes, bulls, cows, goats, rams, chickens, quails, monitor lizards, rabbits, tortoises, or deer. </br>
+<br class="styled">
+</td>
+<td>30</td>
+</tr>
+<tr>
+<td>mn129</td>
+<td><b>kacchap</b>ā <b>kacchap</b>o</td>
+<td><a target="_blank" href=https://suttacentral.net/mn129/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/mn129/en/sujato?layout=linebyline>En</a></td>
+<td>4</td>   
+<td>
+Macchā <b>kacchap</b>ā susumārā, ye vā panaññepi keci tiracchānagatā pāṇā udakasmiṁ jāyanti udakasmiṁ jīyanti udakasmiṁ mīyanti. </br>
+Fish, turtles, crocodiles, and various others. </br>
+<br class="styled">
+Tatrāssa kāṇo <b>kacchap</b>o, so vassasatassa vassasatassa accayena sakiṁ ummujjeyya. </br>
+And there was a one-eyed turtle who popped up once every hundred years. </br>
+<br class="styled">
+api nu so kāṇo <b>kacchap</b>o amusmiṁ ekacchiggale yuge gīvaṁ paveseyyā”ti? </br>
+Would that one-eyed turtle still poke its neck through the hole in that yoke?” </br>
+<br class="styled">
+“Khippataraṁ kho so, bhikkhave, kāṇo <b>kacchap</b>o amusmiṁ ekacchiggale yuge gīvaṁ paveseyya, ato dullabhatarāhaṁ, bhikkhave, manussattaṁ vadāmi sakiṁ vinipātagatena bālena. </br>
+“That one-eyed turtle would poke its neck through the hole in that yoke sooner than a fool who has fallen to the underworld would be reborn as a human being, I say. </br>
+<br class="styled">
+</td>
+<td>13</td>
+</tr>
+<tr>
+<td>sn35.240</td>
+<td><b>kacchap</b>aṁ <b>kacchap</b>o</td>
+<td><a target="_blank" href=https://suttacentral.net/sn35.240/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.240/en/sujato?layout=linebyline>En</a></td>
+<td>7</td>   
+<td>
+“Bhūtapubbaṁ, bhikkhave, kummo <b>kacchap</b>o sāyanhasamayaṁ anunadītīre gocarapasuto ahosi. </br>
+“Once upon a time, mendicants, a tortoise was grazing along the bank of a river in the afternoon. </br>
+<br class="styled">
+Addasā kho, bhikkhave, kummo <b>kacchap</b>o siṅgālaṁ dūratova gocarapasutaṁ. </br>
+The tortoise saw the jackal off in the distance hunting, </br>
+<br class="styled">
+Siṅgālopi kho, bhikkhave, addasa kummaṁ <b>kacchap</b>aṁ dūratova gocarapasutaṁ. </br>
+But the jackal also saw the tortoise off in the distance grazing. </br>
+<br class="styled">
+Disvāna yena kummo <b>kacchap</b>o tenupasaṅkami; upasaṅkamitvā kummaṁ <b>kacchap</b>aṁ paccupaṭṭhito ahosi: </br>
+So it went up to the tortoise and waiting nearby, thinking, </br>
+<br class="styled">
+‘yadāyaṁ kummo <b>kacchap</b>o soṇḍipañcamānaṁ aṅgānaṁ aññataraṁ vā aññataraṁ vā aṅgaṁ abhininnāmessati, tattheva naṁ gahetvā uddālitvā khādissāmī’ti. </br>
+‘When that tortoise sticks one or other of its limbs or neck out from its shell, I’ll grab it right there, rip it out, and eat it!’ </br>
+<br class="styled">
+Yadā kho, bhikkhave, kummo <b>kacchap</b>o soṇḍipañcamānaṁ aṅgānaṁ aññataraṁ vā aññataraṁ vā aṅgaṁ na abhininnāmi, atha siṅgālo kummamhā nibbijja pakkāmi, otāraṁ alabhamāno. </br>
+But when that tortoise didn’t stick one or other of its limbs or neck out from its shell, the jackal left disappointed, since it couldn’t find a vulnerability. </br>
 <br class="styled">
 </td>
 <td>0</td>
 </tr>
 <tr>
-<td>sn35.82</td>
-<td></td>
-<td><a target="_blank" href=https://suttacentral.net/sn35.82/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.82/en/sujato?layout=linebyline>En</a></td>
+<td>sn56.47</td>
+<td><b>kacchap</b>o</td>
+<td><a target="_blank" href=https://suttacentral.net/sn56.47/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn56.47/en/sujato?layout=linebyline>En</a></td>
+<td>3</td>   
+<td>
+“Seyyathāpi, bhikkhave, puriso mahāsamudde ekacchiggaḷaṁ yugaṁ pakkhipeyya. Tatrāpissa kāṇo <b>kacchap</b>o. So vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjeyya. </br>
+“Mendicants, suppose a person was to throw a yoke with a single hole into the ocean. And there was a one-eyed turtle who popped up once every hundred years. </br>
+<br class="styled">
+api nu kho kāṇo <b>kacchap</b>o vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjanto amusmiṁ ekacchiggaḷe yuge gīvaṁ paveseyyā”ti? </br>
+Would that one-eyed turtle, popping up once every hundred years, still poke its neck through the hole in that yoke?” </br>
+<br class="styled">
+“Khippataraṁ kho so, bhikkhave, kāṇo <b>kacchap</b>o vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjanto amusmiṁ ekacchiggaḷe yuge gīvaṁ paveseyya, na tvevāhaṁ, bhikkhave, sakiṁ vinipātagatena bālena manussattaṁ vadāmi. </br>
+“That one-eyed turtle would poke its neck through the hole in that yoke sooner than a fool who has fallen to the underworld would be reborn as a human being, I say. </br>
+<br class="styled">
+</td>
+<td>1</td>
+</tr>
+<tr>
+<td>sn56.48</td>
+<td><b>kacchap</b>o</td>
+<td><a target="_blank" href=https://suttacentral.net/sn56.48/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn56.48/en/sujato?layout=linebyline>En</a></td>
+<td>3</td>   
+<td>
+Tatrassa kāṇo <b>kacchap</b>o. So vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjeyya. </br>
+And there was a one-eyed turtle who popped up once every hundred years. </br>
+<br class="styled">
+api nu kho kāṇo <b>kacchap</b>o vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjanto amusmiṁ ekacchiggaḷe yuge gīvaṁ paveseyyā”ti? </br>
+Would that one-eyed turtle, popping up once every hundred years, still poke its neck through the hole in that yoke?” </br>
+<br class="styled">
+“Adhiccamidaṁ, bhante, yaṁ so kāṇo <b>kacchap</b>o vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjanto amusmiṁ ekacchiggaḷe yuge gīvaṁ paveseyyā”ti. </br>
+“It’s unlikely, sir.” </br>
+<br class="styled">
+</td>
+<td>1</td>
+</tr>
+<tr>
+<td>thig12.1</td>
+<td>maṇḍūka<b>kacchap</b>ā</td>
+<td><a target="_blank" href=https://suttacentral.net/thig12.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thig12.1/en/soma?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
-“Sir, they speak of this thing called ‘the world’. </br>
+sabbe maṇḍūka<b>kacchap</b>ā; </br>
+all frogs, turtles, </br>
+all the frogs and the turtles, </br>
 <br class="styled">
 </td>
 <td>0</td>
 </tr>
 <tr>
-<td>sn35.84</td>
-<td></td>
-<td><a target="_blank" href=https://suttacentral.net/sn35.84/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.84/en/sujato?layout=linebyline>En</a></td>
+<td>thig16.1</td>
+<td>kāṇa<b>kacchap</b>aṁ</td>
+<td><a target="_blank" href=https://suttacentral.net/thig16.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thig16.1/en/soma?layout=linebyline>En</a></td>
 <td>1</td>   
 <td>
-“‘<b>Loko, loko</b>’ti, bhante, vuccati. </br>
-“Sir, they speak of this thing called ‘the world’. </br>
+Sara kāṇa<b>kacchap</b>aṁ pubba- </br>
+Bear in mind the one-eyed turtle in the eastern sea, </br>
+Remember the one-eyed turtle and the yoke with a hole </br>
 <br class="styled">
 </td>
 <td>0</td>
