--- a/output/kacchap_analysis.html
+++ b/output/kacchap_analysis.html
@@ -58,41 +58,45 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
         <tr>
             <th>Sutta</th>
             <th>Words</th>
-            <th>Links</th>
             <th>Count</th>
+            <th>Metaphors</th>
+            <th class="none">Title</th>
             <th class="none">Quote</th>
-           <th>Metaphors</th>
+            <th class="none">Full texts</th>
         </tr>
     </thead>
     <tbody><tr>
 <td>dn1</td>
 <td><b>kacchap</b>alakkhaṇaṁ</td>
-<td><a target="_blank" href=https://suttacentral.net/dn1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dn1/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>2</td>
+<td><strong>Dīgha Nikāya 1 Brahmajālasutta</strong></td>
 <td>
 seyyathidaṁ—maṇilakkhaṇaṁ vatthalakkhaṇaṁ daṇḍalakkhaṇaṁ satthalakkhaṇaṁ asilakkhaṇaṁ usulakkhaṇaṁ dhanulakkhaṇaṁ āvudhalakkhaṇaṁ itthilakkhaṇaṁ purisalakkhaṇaṁ kumāralakkhaṇaṁ kumārilakkhaṇaṁ dāsalakkhaṇaṁ dāsilakkhaṇaṁ hatthilakkhaṇaṁ assalakkhaṇaṁ mahiṁsalakkhaṇaṁ usabhalakkhaṇaṁ golakkhaṇaṁ ajalakkhaṇaṁ meṇḍalakkhaṇaṁ kukkuṭalakkhaṇaṁ vaṭṭakalakkhaṇaṁ godhālakkhaṇaṁ kaṇṇikālakkhaṇaṁ <b>kacchap</b>alakkhaṇaṁ migalakkhaṇaṁ </br>
 This includes reading the marks of gems, cloth, clubs, swords, spears, arrows, weapons, women, men, boys, girls, male and female bondservants, elephants, horses, buffaloes, bulls, cows, goats, rams, chickens, quails, monitor lizards, rabbits, tortoises, or deer. </br>
 <br class="styled">
 </td>
-<td>2</td>
+<td><a target="_blank" href=https://suttacentral.net/dn1/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/dn1/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>dn2</td>
 <td><b>kacchap</b>alakkhaṇaṁ</td>
-<td><a target="_blank" href=https://suttacentral.net/dn2/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dn2/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>30</td>
+<td><strong>Dīgha Nikāya 2 Sāmaññaphalasutta</strong></td>
 <td>
 Seyyathidaṁ—maṇilakkhaṇaṁ vatthalakkhaṇaṁ daṇḍalakkhaṇaṁ satthalakkhaṇaṁ asilakkhaṇaṁ usulakkhaṇaṁ dhanulakkhaṇaṁ āvudhalakkhaṇaṁ itthilakkhaṇaṁ purisalakkhaṇaṁ kumāralakkhaṇaṁ kumārilakkhaṇaṁ dāsalakkhaṇaṁ dāsilakkhaṇaṁ hatthilakkhaṇaṁ assalakkhaṇaṁ mahiṁsalakkhaṇaṁ usabhalakkhaṇaṁ golakkhaṇaṁ ajalakkhaṇaṁ meṇḍalakkhaṇaṁ kukkuṭalakkhaṇaṁ vaṭṭakalakkhaṇaṁ godhālakkhaṇaṁ kaṇṇikalakkhaṇaṁ <b>kacchap</b>alakkhaṇaṁ migalakkhaṇaṁ </br>
 This includes reading the marks of gems, cloth, clubs, swords, spears, arrows, weapons, women, men, boys, girls, male and female bondservants, elephants, horses, buffaloes, bulls, cows, goats, rams, chickens, quails, monitor lizards, rabbits, tortoises, or deer. </br>
 <br class="styled">
 </td>
-<td>30</td>
+<td><a target="_blank" href=https://suttacentral.net/dn2/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/dn2/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>mn129</td>
 <td><b>kacchap</b>ā <b>kacchap</b>o</td>
-<td><a target="_blank" href=https://suttacentral.net/mn129/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/mn129/en/sujato?layout=linebyline>En</a></td>
 <td>4</td>   
+<td>13</td>
+<td><strong>Majjhima Nikāya 129 Bālapaṇḍitasutta</strong></td>
 <td>
 Macchā <b>kacchap</b>ā susumārā, ye vā panaññepi keci tiracchānagatā pāṇā udakasmiṁ jāyanti udakasmiṁ jīyanti udakasmiṁ mīyanti. </br>
 Fish, turtles, crocodiles, and various others. </br>
@@ -107,13 +111,14 @@ Would that one-eyed turtle still poke its neck through the hole in that yoke?”
 “That one-eyed turtle would poke its neck through the hole in that yoke sooner than a fool who has fallen to the underworld would be reborn as a human being, I say. </br>
 <br class="styled">
 </td>
-<td>13</td>
+<td><a target="_blank" href=https://suttacentral.net/mn129/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/mn129/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>sn35.240</td>
 <td><b>kacchap</b>aṁ <b>kacchap</b>o</td>
-<td><a target="_blank" href=https://suttacentral.net/sn35.240/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn35.240/en/sujato?layout=linebyline>En</a></td>
 <td>7</td>   
+<td>0</td>
+<td><strong>Saṁyutta Nikāya 35.240 19. Āsīvisavagga Kummopamasutta</strong></td>
 <td>
 “Bhūtapubbaṁ, bhikkhave, kummo <b>kacchap</b>o sāyanhasamayaṁ anunadītīre gocarapasuto ahosi. </br>
 “Once upon a time, mendicants, a tortoise was grazing along the bank of a river in the afternoon. </br>
@@ -134,13 +139,14 @@ Yadā kho, bhikkhave, kummo <b>kacchap</b>o soṇḍipañcamānaṁ aṅgānaṁ
 But when that tortoise didn’t stick one or other of its limbs or neck out from its shell, the jackal left disappointed, since it couldn’t find a vulnerability. </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/sn35.240/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/sn35.240/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>sn56.47</td>
 <td><b>kacchap</b>o</td>
-<td><a target="_blank" href=https://suttacentral.net/sn56.47/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn56.47/en/sujato?layout=linebyline>En</a></td>
 <td>3</td>   
+<td>1</td>
+<td><strong>Saṁyutta Nikāya 56.47 5. Papātavagga Paṭhamachiggaḷayugasutta</strong></td>
 <td>
 “Seyyathāpi, bhikkhave, puriso mahāsamudde ekacchiggaḷaṁ yugaṁ pakkhipeyya. Tatrāpissa kāṇo <b>kacchap</b>o. So vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjeyya. </br>
 “Mendicants, suppose a person was to throw a yoke with a single hole into the ocean. And there was a one-eyed turtle who popped up once every hundred years. </br>
@@ -152,13 +158,14 @@ Would that one-eyed turtle, popping up once every hundred years, still poke its 
 “That one-eyed turtle would poke its neck through the hole in that yoke sooner than a fool who has fallen to the underworld would be reborn as a human being, I say. </br>
 <br class="styled">
 </td>
-<td>1</td>
+<td><a target="_blank" href=https://suttacentral.net/sn56.47/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/sn56.47/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>sn56.48</td>
 <td><b>kacchap</b>o</td>
-<td><a target="_blank" href=https://suttacentral.net/sn56.48/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/sn56.48/en/sujato?layout=linebyline>En</a></td>
 <td>3</td>   
+<td>1</td>
+<td><strong>Saṁyutta Nikāya 56.48 5. Papātavagga Dutiyachiggaḷayugasutta</strong></td>
 <td>
 Tatrassa kāṇo <b>kacchap</b>o. So vassasatassa vassasatassa accayena sakiṁ sakiṁ ummujjeyya. </br>
 And there was a one-eyed turtle who popped up once every hundred years. </br>
@@ -170,33 +177,35 @@ Would that one-eyed turtle, popping up once every hundred years, still poke its 
 “It’s unlikely, sir.” </br>
 <br class="styled">
 </td>
-<td>1</td>
+<td><a target="_blank" href=https://suttacentral.net/sn56.48/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/sn56.48/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>thig12.1</td>
 <td>maṇḍūka<b>kacchap</b>ā</td>
-<td><a target="_blank" href=https://suttacentral.net/thig12.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thig12.1/en/soma?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>0</td>
+<td><strong>Therīgāthā 12.1 Soḷasakanipāta Puṇṇātherīgāthā</strong></td>
 <td>
 sabbe maṇḍūka<b>kacchap</b>ā; </br>
 all frogs, turtles, </br>
 all the frogs and the turtles, </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/thig12.1/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/thig12.1/en/soma?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>thig16.1</td>
 <td>kāṇa<b>kacchap</b>aṁ</td>
-<td><a target="_blank" href=https://suttacentral.net/thig16.1/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/thig16.1/en/soma?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>0</td>
+<td><strong>Therīgāthā 16.1 Mahānipāta Sumedhātherīgāthā</strong></td>
 <td>
 Sara kāṇa<b>kacchap</b>aṁ pubba- </br>
 Bear in mind the one-eyed turtle in the eastern sea, </br>
 Remember the one-eyed turtle and the yoke with a hole </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/thig16.1/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/thig16.1/en/soma?layout=linebyline>English</a></td>
 </tr>
     </tbody>
 </table>
