--- a/output/dārucīr_analysis.html
+++ b/output/dārucīr_analysis.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title>Dārucīr in Pali Suttas</title>
+  <title>Dārucīr 24 matches in 3 texts of Pali Suttas</title>
+  <link rel="icon" type="image/png" href="https://find.dhamma.gift/templates/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <script
@@ -49,7 +50,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 
 </head>
 <body>
-    <h3>Dārucīr in Pali Suttas</h3>
+    <h3>Dārucīr 24 matches in 3 texts of Pali Suttas</h3>
     <button id="btn-hide-all-children" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" type="button">Vivaṭṭo</button>
 <hr>
@@ -58,42 +59,46 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
         <tr>
             <th>Sutta</th>
             <th>Words</th>
-            <th>Links</th>
             <th>Count</th>
+            <th>Metaphors</th>
+            <th class="none">Title</th>
             <th class="none">Quote</th>
-           <th>Metaphors</th>
+            <th class="none">Full texts</th>
         </tr>
     </thead>
     <tbody><tr>
 <td>an1.209-218</td>
 <td><b>dārucīr</b>iyo</td>
-<td><a target="_blank" href=https://suttacentral.net/an1.209-218/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/an1.209-218/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>0</td>
+<td><strong>Aṅguttara Nikāya 1 16. Tatiyavagga</strong></td>
 <td>
 … Khippābhiññānaṁ yadidaṁ bāhiyo <b>dārucīr</b>iyo. </br>
 … with swift insight is Bāhiya of the Bark Cloth. </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/an1.209-218/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/an1.209-218/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>dhp100-115</td>
 <td>Bāhiya<b>dārucīr</b>iyattheravatthu</td>
-<td><a target="_blank" href=https://suttacentral.net/dhp100-115/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/dhp100-115/en/sujato?layout=linebyline>En</a></td>
 <td>1</td>   
+<td>0</td>
+<td><strong>Khuddakanikāya Dhammapada Sahassavagga Tambadāṭhikacoraghātakavatthu</strong></td>
 <td>
 Bāhiya<b>dārucīr</b>iyattheravatthu </br>
   dhp101 </br>
 </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/dhp100-115/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/dhp100-115/en/sujato?layout=linebyline>English</a></td>
 </tr>
 <tr>
 <td>ud1.10</td>
 <td><b>dārucīr</b>iyaṁ <b>dārucīr</b>iyassa <b>dārucīr</b>iyo</td>
-<td><a target="_blank" href=https://suttacentral.net/ud1.10/pli/ms>Pli</a>    <a target="_blank" href=https://suttacentral.net/ud1.10/en/sujato?layout=linebyline>En</a></td>
 <td>22</td>   
+<td>0</td>
+<td><strong>Udāna 1.10 Bāhiyasutta</strong></td>
 <td>
 Tena kho pana samayena bāhiyo <b>dārucīr</b>iyo suppārake paṭivasati samuddatīre sakkato garukato mānito pūjito apacito lābhī cīvarapiṇḍapātasenāsanagilānapaccayabhesajjaparikkhārānaṁ. </br>
 Now at that time Bāhiya of the Bark Cloth was residing by Suppāraka on the ocean shore, where he was honored, respected, revered, venerated, and esteemed. And he received robes, almsfood, lodgings, and medicines and supplies for the sick. </br>
@@ -153,7 +158,7 @@ Parinibbuto, bhikkhave, bāhiyo <b>dārucīr</b>iyo”ti. </br>
 Bāhiya of the Bark Cloth has become fully extinguished.” </br>
 <br class="styled">
 </td>
-<td>0</td>
+<td><a target="_blank" href=https://suttacentral.net/ud1.10/pli/ms>Pali</a>    <a target="_blank" href=https://suttacentral.net/ud1.10/en/sujato?layout=linebyline>English</a></td>
 </tr>
     </tbody>
 </table>
@@ -162,7 +167,6 @@ $(document).ready(function (){
     var table = $('#pali').DataTable({
         'responsive': true
     });
-
     // Handle click on "Expand All" button
     $('#btn-show-all-children').on('click', function(){
         // Expand row details
@@ -175,5 +179,6 @@ $(document).ready(function (){
     });
 });
   </script>
+<a href="/">Main page</a>
 </body>
 </html>
