--- a/output/table.html
+++ b/output/table.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <title>Cīvarapiṇḍapātasenāsanagilānappaccayabhesajjaparikkhārā in Pali Suttas</title>
+  <title>Cīvarapiṇḍapātasenāsanagilānappaccayabhesajjaparikkhārā 55 matches in 19 texts of Pali Suttas</title>
+  <link rel="icon" type="image/png" href="https://find.dhamma.gift/templates/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <script
@@ -49,7 +50,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 
 </head>
 <body>
-    <h3>Cīvarapiṇḍapātasenāsanagilānappaccayabhesajjaparikkhārā in Pali Suttas</h3>
+    <h3>Cīvarapiṇḍapātasenāsanagilānappaccayabhesajjaparikkhārā 55 matches in 19 texts of Pali Suttas</h3>
     <button id="btn-hide-all-children" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" type="button">Vivaṭṭo</button>
 <hr>
@@ -421,9 +422,6 @@ $(document).ready(function (){
     var table = $('#pali').DataTable({
         'responsive': true
     });
-$('#pali').dataTable( {
-  "autoWidth": true
-} );
     // Handle click on "Expand All" button
     $('#btn-show-all-children').on('click', function(){
         // Expand row details
@@ -436,5 +434,6 @@ $('#pali').dataTable( {
     });
 });
   </script>
+<a href="/">Main page</a>
 </body>
 </html>
