ss# Please enter the commit message for your changes. Lines starting

--- a/output/dārucīr_analysis.html
+++ b/output/dārucīr_analysis.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Dārucīr 24 matches in 3 texts of Pali Suttas</title>
+  <title>Dārucīr 3 texts and 24 matches in Suttas (Pali)</title>
   <link rel="icon" type="image/png" href="https://find.dhamma.gift/templates/favico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
@@ -50,7 +50,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td:first-child:before,table
 
 </head>
 <body>
-    <h3>Dārucīr 24 matches in 3 texts of Pali Suttas</h3>
+    <h3>Dārucīr 3 texts and 24 matches in Suttas (Pali)</h3>
     <button id="btn-hide-all-children" type="button">Saṁvaṭṭo</button>    
 <button id="btn-show-all-children" type="button">Vivaṭṭo</button>
 <hr>
