--- a/scripts/autocomplete.html
+++ b/scripts/autocomplete.html
@@ -9,7 +9,20 @@
    <link href="/css/extrastyles.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-  <script>
+<style>
+
+input{
+  height:40px;
+}
+
+.gdbox
+{
+  height:600px;
+}
+	</style>
+	
+	
+ <script>
  $.ajax({
     url: "/scripts/sutta_words.txt",
     dataType: "text",
@@ -56,6 +69,14 @@ response( a.concat(b) );
     }
 });
  
+ 
+ $('input').on('focus',function(){
+		var inputHeight=$(this).offset().top;
+    $("html, body").animate({ scrollTop: inputHeight}, 600);
+    return false;
+ });
+ 
+
   </script>
 </head>
 <body>
@@ -65,5 +86,18 @@ response( a.concat(b) );
   <input id="tags">
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+	  <div class="gdbox">
+    <div id="gdb1" class="gdbutton fontwhitenshadow">Q</div>
+    <input id="one" type="text"><br><br>
+    <input id="two" type="text"><br><br>
+    <input id="one" type="text"><br><br><input type="text">
+</div>
 </body>
 </html>
+
+
+
+
+	
