update from server

--- a/assets/demo/paṭiccasamupp_sutta_pali.html
+++ b/assets/demo/paṭiccasamupp_sutta_pali.html
@@ -855,7 +855,7 @@ When seven days had passed, the Buddha emerged from that state of immersion. In 
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/paṭiccasamupp_sutta_pali_words.html>Words</a>
+<a href=/assets/demo/paṭiccasamupp_sutta_pali_words.html>Words</a>
 
 
     <script type='text/javascript'>
