--- a/assets/demo/paṭiccasamupp_sutta_pali_words.html
+++ b/assets/demo/paṭiccasamupp_sutta_pali_words.html
@@ -175,7 +175,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/paṭiccasamupp_sutta_pali.html>Quotes</a>
+<a href=/assets/demo/paṭiccasamupp_sutta_pali.html>Quotes</a>
 
 
     <script type='text/javascript'>
