--- a/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali.html
+++ b/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali.html
@@ -14037,7 +14037,7 @@ A Mountain (2nd) <br class=btwntrn>
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali_words.html>Words</a>
+<a href=/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali_words.html>Words</a>
 
 
     <script type='text/javascript'>
