--- a/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali_words.html
+++ b/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali_words.html
@@ -127,7 +127,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali.html>Quotes</a>
+<a href=/assets/demo/seyyathāpi_adhivacan_ūpama_opama_suttanta_pali.html>Quotes</a>
 
 
     <script type='text/javascript'>
