--- a/assets/demo/ānāpānassatisutta_suttanta_pali.html
+++ b/assets/demo/ānāpānassatisutta_suttanta_pali.html
@@ -73,7 +73,7 @@
 </tbody>
 </table>
 <a href=/>Main page</a>&nbsp;
-<a href=/output/ānāpānassatisutta_suttanta_pali_words.html>Words</a>
+<a href=/assets/demo/ānāpānassatisutta_suttanta_pali_words.html>Words</a>
 
 </div>
     <script type='text/javascript'>
