--- a/assets/demo/ānāpānassatisutta_suttanta_pali_words.html
+++ b/assets/demo/ānāpānassatisutta_suttanta_pali_words.html
@@ -64,7 +64,7 @@
 </tbody>
 </table>
 <a href=/>Main page</a>&nbsp;
-<a href=/output/ānāpānassatisutta_suttanta_pali.html>Quotes</a>
+<a href=/assets/demo/ānāpānassatisutta_suttanta_pali.html>Quotes</a>
 
 </div>
     <script type='text/javascript'>
