--- a/assets/demo/восьмеричн_sutta_ru.html
+++ b/assets/demo/восьмеричн_sutta_ru.html
@@ -2514,7 +2514,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/восьмеричн_sutta_ru_words.html>Words</a>
+<a href=/assets/demo/восьмеричн_sutta_ru_words.html>Words</a>
 
 
     <script type='text/javascript'>
