--- a/assets/demo/восьмеричн_sutta_ru_words.html
+++ b/assets/demo/восьмеричн_sutta_ru_words.html
@@ -115,7 +115,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/восьмеричн_sutta_ru.html>Quotes</a>
+<a href=/assets/demo/восьмеричн_sutta_ru.html>Quotes</a>
 
 
     <script type='text/javascript'>
