--- a/assets/demo/нравственность_sutta_ru.html
+++ b/assets/demo/нравственность_sutta_ru.html
@@ -1860,7 +1860,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/нравственность_sutta_ru_words.html>Words</a>
+<a href=/assets/demo/нравственность_sutta_ru_words.html>Words</a>
 
 
     <script type='text/javascript'>
