--- a/assets/demo/океан_sutta_ru.html
+++ b/assets/demo/океан_sutta_ru.html
@@ -1840,7 +1840,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/океан_sutta_ru_words.html>Words</a>
+<a href=/assets/demo/океан_sutta_ru_words.html>Words</a>
 
 
     <script type='text/javascript'>
