--- a/assets/demo/океан_sutta_ru_words.html
+++ b/assets/demo/океан_sutta_ru_words.html
@@ -157,7 +157,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/океан_sutta_ru.html>Quotes</a>
+<a href=/assets/demo/океан_sutta_ru.html>Quotes</a>
 
 
     <script type='text/javascript'>
