--- a/assets/demo/สาวัตถี_sutta_th.html
+++ b/assets/demo/สาวัตถี_sutta_th.html
@@ -13534,7 +13534,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/สาวัตถี_sutta_th_words.html>Words</a>
+<a href=/assets/demo/สาวัตถี_sutta_th_words.html>Words</a>
 
 
     <script type='text/javascript'>
