--- a/assets/demo/สาวัตถี_sutta_th_words.html
+++ b/assets/demo/สาวัตถี_sutta_th_words.html
@@ -367,7 +367,7 @@ text-align: left;
 </tbody>
 </table>
 <a href=/>Main page </a>
-<a href=/output/สาวัตถี_sutta_th.html>Quotes</a>
+<a href=/assets/demo/สาวัตถี_sutta_th.html>Quotes</a>
 
 
     <script type='text/javascript'>
